tests/NormalTests/paczka2/big_fuzzy/94132323.err
Error in line 2: brXzf7eG S436 43,2
Error in line 4: pXyWpcpeKm4 S833 13,6
Error in line 9: fYFadKq S833 30,4
Error in line 16: pXyWpcpeKm4 A990 8,7
Error in line 13: S833 S833 91,8
Error in line 15: fYFadKq S436 16,8
Error in line 17: qWhtY A168 39,3
Error in line 20: S833 A990 59,6
Error in line 32: pXyWpcpeKm4 S436 79,8
Error in line 38: brXzf7eG A990 79,4
Error in line 41: S833A99096,5
Error in line 39: hwZ4J S436 87,6
Error in line 48: S833 S436 17,1
Error in line 55: 0aWM S436 99,5
Error in line 68: brXzf7eG S833 44,2
Error in line 54: qWhtY S833 32,4
Error in line 75: hwZ4J S436 74,3
Error in line 84: fYFadKq A990 110,13
Error in line 83: fYFadKq A990 30,8
Error in line 80: qWhtY A168 97,9
Error in line 81: hwZ4J A990 44,4
Error in line 106: pXyWpcpeKm4 S833 95,7
Error in line 110: pXyWpcpeKm4 A990 53,4
Error in line 113: hwZ4J A168 40,9
Error in line 119: S833 S833 67,7
Error in line 131: qWhtY A990 -1,6
Error in line 136: S833 S436 83,49
Error in line 114: fYFadKq S833 115,8
Error in line 144: 0aWM S436 79,7
Error in line 147: 0aWM A990 17,9
Error in line 148: 0aWM S833 60,6
Error in line 151: 0aWM A990 68,3
Error in line 154: 0aWM A168 79,3
Error in line 155: fYFadKq A990 76,5
Error in line 160: fYFadKq S4w6 7,7
Error in line 158: fYFadKq A168 64,3
Error in line 129: qWhtY A990 35,5
Error in line 164: qWhtY A168 87,6
Error in line 161: 0aWM A168 14,7
Error in line 166: qWhtY A990 38,8
Error in line 183: hwZ4J S833 60,0
Error in line 169: pXyWpcpeKm4 S833 47,2
Error in line 184: hwZ4J S436 91,3
Error in line 195: hwZ4J S833 51,2
Error in line 202: fYFadKq A168 27,2
Error in line 139: S833 S436 225,7
Error in line 221: qWhtY A990 60,4
Error in line 227: qWhtY S436 4,5
Error in line 238: fYFadKq A168 15,2
Error in line 246: brXzf7eG S436 57,4
Error in line 249: 0aWM A168 392,3
